--- a/docs/specs.tex
+++ b/docs/specs.tex
@@ -61,6 +61,8 @@
 		keywordstyle=[2]\color{darkred},
     keywords=[3]{def, check, eval, search, import},
     keywordstyle=[3]\color{darkred},
+    keywords=[4]{max, imax},
+    keywordstyle=[4]\color{forestgreen},
 }
 \lstnewenvironment{proost}[1][]{\lstset{style=proost, #1}}{}
 
@@ -159,7 +161,7 @@ following:
 \end{itemize}
 
 Below is an overview of the syntax of the terms, including hypothetical
-developments. The syntax is partially inspired by that of OCaml. Comments are
+developments. The syntax is partially inspired by that of Coq, OCaml and Lean. Comments are
 defined using the keyword \texttt{//}.
 
 \paragraph{Elementary type theory}
