--- a/docs/manual.tex
+++ b/docs/manual.tex
@@ -1,15 +1,10 @@
 \documentclass[twocolumn]{article}
+
 \usepackage[british]{babel}
-\usepackage{textcase}% provides \MakeTextUppercase (does not impact math mode)
-\usepackage{amssymb, amsmath, amsthm, mathrsfs}
 \usepackage{fancyhdr}
-\usepackage{listings}
-\usepackage{bussproofs} % proof tree
-\usepackage[dvipsnames]{xcolor}
-\usepackage{graphicx}
 \RequirePackage[a4paper, left=2cm, right=2cm, bottom=3cm, top=2.3cm, headsep=100pt]{geometry}
+\usepackage{header}
 \RequirePackage[small]{titlesec} % Taille des sections réduite
-\RequirePackage[pdfborderstyle={/S/U/W 0}]{hyperref} % Le paramètre retire les bordures autour des hyperliens
 
 \author{
   Arthur \textsc{Adjedj}\\
@@ -26,90 +21,26 @@
   \\[1\baselineskip]\normalsize ENS Paris-Saclay
 }
 
-%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%% Listings %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
-\definecolor{gray}{rgb}{0.5,0.5,0.5}
-\definecolor{paleblue}{rgb}{0.7,0.7,1}
-\definecolor{darkgray}{rgb}{0.1,0.1,0.1}
-\definecolor{dark}{rgb}{0,0,0}
-\definecolor{forestgreen}{rgb}{0,0.3,0}
-\definecolor{darkred}{rgb}{0.5,0,0}
 
-\lstdefinestyle{default}{
-    frame=tb,
-    basicstyle=\ttfamily,
-    numbers=left,
-    numbersep=5pt,
-    xleftmargin=1.5em,
-    framexleftmargin=1em,
-    numberstyle=\footnotesize\ttfamily\color{paleblue},
-    keywordstyle={\bfseries\itshape\color{dark}},
-    commentstyle=\color{gray},
-    texcl, % Back to TeX styling within *inline* comments
-    escapechar=`, % escape character for block comments
-    %escapebegin=\lst@commentstyle,
-    breaklines=true,
-    breakatwhitespace=true
-}
-\lstdefinestyle{proost}{
-    alsoletter={//,.,:,=},
-    style=default,
-    numberstyle=\scriptsize\ttfamily\color{paleblue},
-    comment=[l]{//},
-    keywords={fun, if},
-    keywordstyle=\color{forestgreen},
-		keywords=[2]{Prop, Type, Sort},
-		keywordstyle=[2]\color{blue},
-    keywords=[3]{def, check, eval, search, import},
-    keywordstyle=[3]\color{darkred},
-    keywords=[4]{max, imax},
-    keywordstyle=[4]\color{forestgreen},
-}
-\lstnewenvironment{proost}[1][]{\lstset{style=proost, #1}}{}
-
-\lstset{style=proost}
-\lstMakeShortInline[columns=flexible]¤
-%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
-
-%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%% headings %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
+%%% headings
 \pagestyle{fancy}
 \renewcommand{\headrulewidth}{0pt}
 \renewcommand{\footrulewidth}{0pt}
 
 \fancyhead{}
 \fancyfoot[L]{\small{\reflectbox{\copyright} \the\year{}}}
-%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 
-%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%% bussproofs settings %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
-% documentation at https://mirror.ibcp.fr/pub/CTAN/macros/latex/contrib/bussproofs/BussGuide2.pdf
-\EnableBpAbbreviations
-% Overriding default label style
-\def\RL#1{\RightLabel{\footnotesize\bfseries{#1}}}
-\def\LL#1{\LeftLabel{\footnotesize\bfseries{#1}}}
 
-% boxed proofs, used to align multiple proofs on a single line
-\newenvironment{bprooftree}
-  {\leavevmode\hbox\bgroup}
-  {\DisplayProof\egroup}
-
-\newcommand{\textr}[1]{{\footnotesize\textbf{\MakeTextUppercase{#1}}}}
-% Fixes alignment issues but not without some consistency issues
-\def\RL#1{\RightLabel{\makebox[0pt][l]{\textr{#1}}}}
-\def\LL#1{\LeftLabel{\makebox[0pt][r]{\textr{#1}}}}
-% consistent label (with width)
-\def\cRL#1{\RightLabel{\textr{#1}}}
-\def\cLL#1{\LeftLabel{\textr{#1}}}
-%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
-
-%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%% Divers %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
-\setlength{\columnsep}{20pt} % 10 pt par défaut
+%%%
+\setlength{\columnsep}{20pt} % 10pt is the default
 
 \newcommand{\members}[1]{\texorpdfstring{\hfill\scriptsize #1}{}}
 
 \newcommand{\etun}{{\color{Green} ($\star$)} }
 \newcommand{\etde}{{\color{Orange} ($\star\star$)} }
-%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 
 
+%%%
 \begin{document}
 \maketitle
 \thispagestyle{fancy}
@@ -142,15 +73,15 @@ In the toplevel, users are greeted with a prompt. There, they may enter the
 following commands:
 \begin{itemize}
 	\item ¤import file1 file2¤ typechecks
-		and loads the files in the current environment;
+	      and loads the files in the current environment;
 	\item ¤search v¤ looks for the definition of variable ¤v¤;
 	\item ¤def a := t¤
-		defines an alias ¤a¤ that can be used in any following command;
+	      defines an alias ¤a¤ that can be used in any following command;
 	\item ¤def a: ty := t¤ defines an alias ¤a¤ that is checked to
-		be of type ¤ty¤;
+	      be of type ¤ty¤;
 	\item ¤check u: t¤ verifies ¤u¤ has type ¤t¤;
-  \item ¤check u¤ provides the type of ¤u¤;
-  \item ¤eval u¤ provides the normal form of ¤u¤.
+	\item ¤check u¤ provides the type of ¤u¤;
+	\item ¤eval u¤ provides the normal form of ¤u¤.
 \end{itemize}
 
 Optionally, defined terms can be of the form ¤a.{i, j}¤, meaning they are
@@ -171,36 +102,36 @@ the up and down arrow keys or some auto-completion from previous commands.
 Language syntax is as such:
 \begin{itemize}
 	\item Functions (\(\lambda\)-abstractions) are defined with the keyword ¤fun¤:
-		¤fun x: A => u¤, ¤fun x y: A => u¤ (both ¤x¤ and ¤y¤ are of type ¤A¤),
-		¤fun x: A, y: B => u¤ (multiple arguments, where ¤B¤ may depend on ¤x¤);
+	      ¤fun x: A => u¤, ¤fun x y: A => u¤ (both ¤x¤ and ¤y¤ are of type ¤A¤),
+	      ¤fun x: A, y: B => u¤ (multiple arguments, where ¤B¤ may depend on ¤x¤);
 
 	\item Dependent function types (\(\Pi\)-types) are defined with a pair of parentheses
-		before an arrow, as in: ¤(x: A) -> B¤, ¤(x y: A) -> B¤ or
-		¤(x: A, y: B) -> C¤ (where the distinctions are similar to the previous
-		item. Additionally, there is some usual syntactic sugar when the output
-		type does not mention the input argument, which corresponds to usual
-		function types: ¤A -> B¤, ¤A -> B -> C¤ (right-associativity);
+	      before an arrow, as in: ¤(x: A) -> B¤, ¤(x y: A) -> B¤ or
+	      ¤(x: A, y: B) -> C¤ (where the distinctions are similar to the previous
+	      item. Additionally, there is some usual syntactic sugar when the output
+	      type does not mention the input argument, which corresponds to usual
+	      function types: ¤A -> B¤, ¤A -> B -> C¤ (right-associativity);
 
 	\item Function application of two terms ¤u¤ and ¤v¤ is simply written ¤u v¤,
-		and is left-associative when there are multiple arguments;
+	      and is left-associative when there are multiple arguments;
 
 	\item Variables are regular strings, which may only correspond to bound
-		variables or previously defined terms (or declarations as explained in the
-		previous section);
+	      variables or previously defined terms (or declarations as explained in the
+	      previous section);
 
 	\item The type of propositions and higher-order types are written ¤Prop¤ and
-		¤Type i¤, as usual. One may also refer to the universes in hierarchy through
-    the ¤Sort¤ keyword as follows: ¤Sort 0 = Prop¤ and ¤Sort n + 1 = Type n¤.
+	      ¤Type i¤, as usual. One may also refer to the universes in hierarchy through
+	      the ¤Sort¤ keyword as follows: ¤Sort 0 = Prop¤ and ¤Sort n + 1 = Type n¤.
 \end{itemize}
 
 The syntax of universe levels is the following:
 \begin{itemize}
 	\item numeric constants and level variables defined in the definition of a
-		declaration are valid universe level;
+	      declaration are valid universe level;
 	\item if ¤u¤ is a valid level, ¤u + n¤ is valid, where ¤n¤ is a numeric
-		constant;
+	      constant;
 	\item if ¤u¤ and ¤v¤ are valid levels, ¤max u v¤ and ¤imax u v¤ (impredicative
-		maximum) are valid levels.
+	      maximum) are valid levels.
 \end{itemize}
 
 \section{Axioms}
