--- a/docs/specs.tex
+++ b/docs/specs.tex
@@ -1,15 +1,10 @@
 \documentclass[twocolumn]{article}
+
 \usepackage[british]{babel}
-\usepackage{textcase}% provides \MakeTextUppercase (does not impact math mode)
-\usepackage{amssymb, amsmath, amsthm, mathrsfs}
 \usepackage{fancyhdr}
-\usepackage{listings}
-\usepackage{bussproofs} % proof tree
-\usepackage[dvipsnames]{xcolor}
-\usepackage{graphicx}
 \RequirePackage[a4paper, left=2cm, right=2cm, bottom=3cm, top=2.3cm, headsep=100pt]{geometry}
+\usepackage{header}
 \RequirePackage[small]{titlesec} % Taille des sections réduite
-\RequirePackage[pdfborderstyle={/S/U/W 0}]{hyperref} % Le paramètre retire les bordures autour des hyperliens
 
 \author{
   Arthur \textsc{Adjedj}\\
@@ -26,99 +21,35 @@
   \\[1\baselineskip]\normalsize ENS Paris-Saclay
 }
 
-%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%% Listings %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
-\definecolor{gray}{rgb}{0.5,0.5,0.5}
-\definecolor{paleblue}{rgb}{0.7,0.7,1}
-\definecolor{darkgray}{rgb}{0.1,0.1,0.1}
-\definecolor{dark}{rgb}{0,0,0}
-\definecolor{forestgreen}{rgb}{0,0.3,0}
-\definecolor{darkred}{rgb}{0.5,0,0}
 
-\lstdefinestyle{default}{
-    frame=tb,
-    basicstyle=\ttfamily,
-    numbers=left,
-    numbersep=5pt,
-    xleftmargin=1.5em,
-    framexleftmargin=1em,
-    numberstyle=\footnotesize\ttfamily\color{paleblue},
-    keywordstyle={\bfseries\itshape\color{dark}},
-    commentstyle=\color{gray},
-    texcl, % Back to TeX styling within *inline* comments
-    escapechar=`, % escape character for block comments
-    %escapebegin=\lst@commentstyle,
-    breaklines=true,
-    breakatwhitespace=true
-}
-\lstdefinestyle{proost}{
-    alsoletter={//,.,:,=},
-    style=default,
-    numberstyle=\scriptsize\ttfamily\color{paleblue},
-    comment=[l]{//},
-    keywords={fun, if},
-    keywordstyle=\color{forestgreen},
-		keywords=[2]{Prop, Type},
-		keywordstyle=[2]\color{darkred},
-    keywords=[3]{def, check, eval, search, import},
-    keywordstyle=[3]\color{darkred},
-    keywords=[4]{max, imax},
-    keywordstyle=[4]\color{forestgreen},
-}
-\lstnewenvironment{proost}[1][]{\lstset{style=proost, #1}}{}
-
-\lstset{style=proost}
-\lstMakeShortInline[columns=flexible]¤
-%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
-
-%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%% headings %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
+%%% headings
 \pagestyle{fancy}
 \renewcommand{\headrulewidth}{0pt}
 \renewcommand{\footrulewidth}{0pt}
 
 \fancyhead{}
 \fancyfoot[L]{\small{\reflectbox{\copyright} \the\year{}}}
-%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 
-%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%% bussproofs settings %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
-% documentation at https://mirror.ibcp.fr/pub/CTAN/macros/latex/contrib/bussproofs/BussGuide2.pdf
-\EnableBpAbbreviations
-% Overriding default label style
-\def\RL#1{\RightLabel{\footnotesize\bfseries{#1}}}
-\def\LL#1{\LeftLabel{\footnotesize\bfseries{#1}}}
 
-% boxed proofs, used to align multiple proofs on a single line
-\newenvironment{bprooftree}
-  {\leavevmode\hbox\bgroup}
-  {\DisplayProof\egroup}
-
-\newcommand{\textr}[1]{{\footnotesize\textbf{\MakeTextUppercase{#1}}}}
-% Fixes alignment issues but not without some consistency issues
-\def\RL#1{\RightLabel{\makebox[0pt][l]{\textr{#1}}}}
-\def\LL#1{\LeftLabel{\makebox[0pt][r]{\textr{#1}}}}
-% consistent label (with width)
-\def\cRL#1{\RightLabel{\textr{#1}}}
-\def\cLL#1{\LeftLabel{\textr{#1}}}
-%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
-
-%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%% Divers %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
-\setlength{\columnsep}{20pt} % 10 pt par défaut
+%%%
+\setlength{\columnsep}{20pt} % 10pt is the default
 
 \newcommand{\members}[1]{\texorpdfstring{\hfill\scriptsize #1}{}}
 
 \newcommand{\etun}{{\color{Green} ($\star$)} }
 \newcommand{\etde}{{\color{Orange} ($\star\star$)} }
-%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 
 
+%%%
 \begin{document}
 \thispagestyle{fancy}
 \maketitle
 
 \emph{
-  This project is under development, and its specifications themselves are
-  subject to changes, should time be an issue or a general consensus be reached
-  to change the purposes of the tool. An example of that is the syntax of the
-  language, which is still largely unstable. }
+	This project is under development, and its specifications themselves are
+	subject to changes, should time be an issue or a general consensus be reached
+	to change the purposes of the tool. An example of that is the syntax of the
+	language, which is still largely unstable. }
 
 \section{General purpose and functions}
 This project aims at providing a small tool for typechecking expressions written
@@ -148,16 +79,16 @@ provide convenient shorthands and notations. The syntax of commands is the
 following:
 \begin{itemize}
 	\item ¤import relative_path_to_file¤ typechecks
-		and loads the file in the current environment;
+	      and loads the file in the current environment;
 	\item \etun ¤search t¤ searches ¤t¤ in all known terms, where ¤t¤ may contain
-		¤_¤ joker identifiers (see section \ref{sec:unification});
+	      ¤_¤ joker identifiers (see section \ref{sec:unification});
 	\item ¤def a := t¤
-		defines an alias ¤a¤ that can be used in any following command;
+	      defines an alias ¤a¤ that can be used in any following command;
 	\item ¤def a: ty := t¤ defines an alias ¤a¤ that is checked to
-		be of type ¤ty¤;
+	      be of type ¤ty¤;
 	\item ¤check u: t¤ verifies ¤u¤ has type ¤t¤;
-  \item ¤check u¤ provides the type of ¤u¤;
-  \item ¤eval u¤ provides the definition of ¤u¤.
+	\item ¤check u¤ provides the type of ¤u¤;
+	\item ¤eval u¤ provides the definition of ¤u¤.
 \end{itemize}
 
 Below is an overview of the syntax of the terms, including hypothetical
@@ -166,7 +97,7 @@ defined using the keyword \texttt{//}.
 
 \paragraph{Elementary type theory}
 \phantom{hello}
-\begin{proost}
+\begin{mdln}
 // Church construction of natural numbers
 def Nat :=
   (N: Type) -> (N -> N) -> N -> N
@@ -179,32 +110,32 @@ def succ := fun n: Nat, N: Type =>
   fun f: (N -> N), x: N =>
     f (n N f x)
 check succ: Nat -> Nat
-\end{proost}
+\end{mdln}
 
 \paragraph{Universe polymorphism}
 \phantom{hello}
-\begin{proost}
+\begin{mdln}
 def foo.{i,j} : Type (max i j) + 1
-:= Type i -> Type j
-\end{proost}
+  := Type i -> Type j
+\end{mdln}
 
 \paragraph{\etde Unification}
 \phantom{hello}
-\begin{proost}
+\begin{mdln}
 def comm := \/x y, x + y = y + x
-\end{proost}
+\end{mdln}
 
 \paragraph{\etun Existential types} as well as other usual types.
-\begin{proost}
+\begin{mdln}
 def t := E n, n * n - n + 4 = 0
-\end{proost}
+\end{mdln}
 
 \paragraph{\etde General framework for inductive types.} For the moment,
 inductive types and their recursors are hardcoded in the kernel.
-\begin{proost}
+\begin{mdln}
 def inductive Toto :=
   Gur(Nat) | Baba(Toto)
-\end{proost}
+\end{mdln}
 
 \subsection{Toplevel  \members{AuA}}
 The \texttt{proost} command, when provided with no argument, is expected to
@@ -220,7 +151,7 @@ extended notion of ``modules'' \etde where files provide scopes.
 
 \subsection{LSP \members{VL}}
 The \texttt{tilleul} binary provides an implementation of the Language Server
-Protocol and will gradually implement more features from it \etde.
+Protocol and will gradually implement more features of it. \etde
 
 \subsection{Parsing \members{AuA}}
 The parsing approach is straightforward and
@@ -235,12 +166,12 @@ The kernel manipulates
 manage them with a relative level of efficiency. The type theory used to build
 the terms will be successively extended with:
 \begin{itemize}
-  \item abstractions, \(\Pi\)-types, predicative universes with \(\mathsf{Prop}\);
-  \item universe polymorphism;
+	\item abstractions, \(\Pi\)-types, predicative universes with \(\mathsf{Prop}\);
+	\item universe polymorphism;
 	\item equality types, natural numbers;
-  \item \etun \(\Sigma\)-types, etc.;
-  \item \etde extraction;
-  \item \etde lists, records, accessibility predicate.
+	\item \etun \(\Sigma\)-types, etc.;
+	\item \etde extraction;
+	\item \etde lists, records, accessibility predicate.
 \end{itemize}
 
 
