chore: move the toplevel screenshot to the manual, as a listing

--- a/docs/header.sty
+++ b/docs/header.sty
@@ -50,8 +50,10 @@
 	numbers=none,
 	showtabs=false,
 	literate=
+		{>>>}{»}{1}
 		{VVV}{\cmark}{1}
 		{XXX}{\xmark}{1}
+		{LL}{$\lambda$}{1}
 }
 \lstnewenvironment{toplevel}[1][]{\lstset{style=toplevel, #1}}{}
 
